<resources>
    <string name="app_name">MyVacationExperience</string>
    <string name="action_settings">Settings</string>
    <string name="newtripname">Nombre del destino</string>
    <string name="newtripfrom">Fecha desde</string>
    <string name="newtripto">Fecha hasta</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnOk">Aceptar</string>
    <string name="pathFileTrip">trips.txt</string>
    <string name="txtEdit">Editar</string>
    <string name="txtDelete">Eliminar</string>
    <string name="noTripMessage">Todavía no cargaste ningún viaje. Para hacerlo, hacé click en el icono de \"+\"</string>
    <string name="noLayerMessage">Todavía no creaste ninguna categoría para tu viaje. Podrás dividir tus lugares fácilmente. Para hacerlo, hacé click en el icono de \"+\" y luego desde el mapa podrás cargar los lugares que desees</string>
    <string name="addNewLayer">AGREGAR NUEVA CATEGORIA</string>
    <string name="newlayername">Nombre de la categoría</string>
    <string name="txtSelectIcon">Seleccioná un Icono</string>
    <string name="popupConfirm">Si eliminás el viaje se borrarán todas las categorías y lugares que creaste</string>
    <string name="popupConfirmTitle">¿Estás seguro?</string>
    <string name="popupConfirmLayer">Si eliminás la categoría se borrarán todos los lugares que cargaste</string>
    <string name="btnTxtGoogle">Mis viajes</string>
    <string name="btnTxtWikitude">Explorar</string>
    <string name="txtHomeQuiero">Quiero...</string>
    <string name="txtHome">Bienvenido Viajero! Qué te gustaría hacer hoy?</string>
    <string name="txtExpandable">Ver todos los lugares</string>
    <string name="popupConfirmPlace">No se verá en el mapa si se elimina</string>
    <string name="newplacename">Nombre del lugar</string>
    <string name="markerSelected">Nuevo lugar</string>
    <string name="noLayersMap">Creá al menos una categoría antes de buscar lugares a agregar</string>
    <string name="layerVisible">La categoría seleccionada está oculta. Para ver el nuevo punto en el mapa, activala desde la pantalla anterior</string>
    <string name="errorTitle">Encontramos un error</string>
    <string name="emptyFieldsMsg">Se deben completar todos los campos para continuar</string>
    <string name="wrongDate">La fecha desde no puede ser mayor a la fecha hasta</string>
    <string name="duplicatedLayer">Ya existe una categoría con ese nombre</string>
    <string name="gpsMap">Por favor habilitá el GPS para poder continuar</string>
    <string name="mapAvailable">Genial! Ya podés ir al mapa para cargar lugares en tu nueva categoría</string>



    <string name="menu_main_launch_url">Custom URL Launcher</string>
    <string name="menu_main_show_sdk_info">SDK Build Information</string>

    <!-- Permission handling -->
    <string name="permissions_denied">Necesitamos los permisos que te pedimos para poder continuar</string>
    <string name="permission_rationale_text">Necesitamos los permisos que te pedimos para poder continuar</string>
    <string name="permission_rationale_title">Permisos</string>

    <!-- SDK build information -->
    <string name="build_information_title">Build information</string>
    <string name="build_information_config">Build configuration: </string>
    <string name="build_information_date">Build date: </string>
    <string name="build_information_number">Build number: </string>
    <string name="build_information_version">Build version: </string>

    <!-- SamplePoiDetailActivity -->
    <string name="poi_name">Name</string>
    <string name="poi_description">Description</string>
    <string name="poi_id">ID</string>

    <!-- Url launcher storage -->
    <string name="url_list_row_delete">deletes stored url</string>
    <string name="url_list_row_edit">edits list row</string>
    <string name="url_launcher_title">Custom Url Launcher</string>

    <!-- Url launcher settings -->
    <string name="url_launcher_settings_url_hint">http://</string>
    <string name="url_launcher_settings_url_default">http://</string>
    <string name="url_launcher_settings_url">URL</string>
    <string name="url_launcher_settings_name">Name</string>
    <string name="url_launcher_settings_geo">Geo</string>
    <string name="url_launcher_settings_image_tracking">Image Tracking</string>
    <string name="url_launcher_settings_instant_tracking">Instant Tracking</string>
    <string name="url_launcher_settings_object_tracking">Object Tracking</string>
    <string name="url_launcher_settings_camera_focus_mode">Camera Focus Mode</string>
    <string name="url_launcher_settings_camera_position">Camera Position</string>
    <string name="url_launcher_settings_camera_resolution">Camera Resolution</string>
    <string name="url_launcher_settings_camera2_enabled">Camera 2 Enabled</string>
    <string name="url_launcher_settings_ok">OK</string>

    <string-array name="url_launcher_settings_camera_positions">
        <item>Back</item>
        <item>Front</item>
    </string-array>

    <string-array name="url_launcher_settings_focus_mode">
        <item>Continuously</item>
        <item>Once</item>
        <item>Manual</item>
    </string-array>

    <string-array name="url_launcher_settings_camera_resolution">
        <item>640x480</item>
        <item>1280x720</item>
        <item>1920x1080</item>
        <item>AUTO</item>
    </string-array>

</resources>
