<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wikitude.sdksamples.activities.trip_list_activity.TripListActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_main_load_url"
        android:title="@string/menu_main_launch_url"
        android:onClick="launchCustomUrl"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_main_info"
        android:title="@string/menu_main_show_sdk_info"
        android:onClick="showSdkBuildInformation"
        android:orderInCategory="200"
        app:showAsAction="never"/>
</menu>
