<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editNameTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/newtripname"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/editFromTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editNameTrip"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/newtripfrom"
        android:maxLines="1"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="142dp" />

    <EditText
        android:id="@+id/editToTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editFromTrip"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/newtripto"
        android:maxLines="1"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="201dp" />

    <DatePicker
        android:id="@+id/tripDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="28dp" />

    <Button
        android:id="@+id/btnNewTripCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editToTrip"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="24dp"
        android:layout_toStartOf="@+id/btnNewTripOk"
        android:text="@string/btnCancel" />

    <Button
        android:id="@+id/btnNewTripOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnNewTripCancel"
        android:layout_alignBottom="@+id/btnNewTripCancel"
        android:layout_alignEnd="@+id/editToTrip"
        android:layout_marginEnd="13dp"
        android:text="@string/btnOk" />
</RelativeLayout>