<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/homeapp"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="95dp"
            android:layout_marginStart="45dp"
            android:text="@string/btnTxtGoogle" />

        <Button
            android:id="@+id/btnWikitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnGoogle"
            android:layout_alignBottom="@+id/btnGoogle"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="53dp"
            android:text="@string/btnTxtWikitude" />

        <TextView
            android:id="@+id/txtHome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnGoogle"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="71dp"
            android:layout_marginStart="18dp"
            android:text="@string/txtHomeQuiero" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignStart="@+id/txtHome2"
            android:layout_marginBottom="59dp"
            android:layout_marginLeft="59dp"
            android:layout_marginRight="59dp"
            android:layout_marginStart="11dp"
            android:textSize="40dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="#FFFFFF"
            android:text="@string/txtHome"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#ffffcc"
        android:orientation="vertical">
    </RelativeLayout>
</RelativeLayout>